# gitledger

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api-reference.md  architecture.md  changelog.md  index.md  user-guide.md
examples/: basic_usage.py  investigation.py  multi_agent.py  trend_and_anomalies.py  wintermute_integration.py
src/gitledger/: __init__.py  diff.py  git.py  index.py  models.py  narrative.py  repo.py  trend.py
tests/: conftest.py  test_diff.py  test_git.py  test_index.py  test_narrative.py  test_repo.py  test_trend.py
