[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitledger"
version = "1.0.0"
description = "Structural memory for agents and automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
keywords = ["git", "memory", "agents", "automation", "temporal", "ledger"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/nirvanatikku/gitledger"
Documentation = "https://github.com/nirvanatikku/gitledger#readme"
Repository = "https://github.com/nirvanatikku/gitledger"
Issues = "https://github.com/nirvanatikku/gitledger/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gitledger = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["gitledger"]

[tool.coverage.report]
show_missing = true
